admission/ValidatingAdmissionPolicy/policies/image-digest/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-image-digest-initcontainers
  annotations:
    kubeapt.io/uuid: "b6f03623-4d26-40db-a300-f5d2c08cdd6e"
spec:
  containers:
  - name: main
    image: busybox@sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef
    command: ["sh", "-c", "sleep 3600"]
